--- a/assets/css/video.css
+++ b/assets/css/video.css
@@ -19,7 +19,7 @@
   flex-direction: column;
   align-items: flex-start; /* Alinha tudo à esquerda */
   justify-content: flex-start; /* Alinha tudo ao topo */
- 
+
   padding: 60px 60px 60px 120px; /* Reduzi um pouco o padding para ficar "mais a esquerda e topo" mas mantendo respiro */
   background-color: #fffcfc;
 
@@ -51,7 +51,6 @@
   width: 100%;
   max-width: 350px; /* Diminuindo a largura do formulário/input */
   margin-top: 10px;
- 
 }
 
 .video input {
@@ -86,3 +85,24 @@
 }
 /* testeddddd */
 
+@media (max-width: 768px) {
+  .video {
+    padding: 30px;
+    align-items: center;
+  }
+  .video h2 {
+    margin-bottom: 40px;
+    font-size: 2rem;
+    text-align: center;
+  }
+  .video form {
+    flex-direction: column;
+    align-items: center;
+  }
+  .video input {
+    width: 100%;
+  }
+  .video button {
+    width: 100%;
+  }
+}
