--- a/assets/css/atividades.css
+++ b/assets/css/atividades.css
@@ -8,20 +8,20 @@
   display: flexbox;
   padding: 20px 50px;
   background-color: #ffffff;
-} 
-.atividades-title  {
-text-align: center  ;
-font-size: 2.5rem;
+}
+.atividades-title {
+  text-align: center;
+  font-size: 2.5rem;
   color: #7b7b7b;
   margin: 0;
   padding: 0;
- font-weight: 600;
+  font-weight: 600;
   line-height: 1.3;
   box-sizing: border-box;
   font-style: inherit;
-} 
+}
 .atividades-container {
-  display: flex;  
+  display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
@@ -34,7 +34,7 @@ font-size: 2.5rem;
 
   padding: 10px 5px;
   border: 1px solid #80f186;
-  background-color:#f1fff9;
+  background-color: #f1fff9;
 
   width: 30%;
   box-sizing: border-box;
@@ -46,19 +46,19 @@ font-size: 2.5rem;
 .atividade img {
   width: 100%;
   height: auto;
-} 
+}
 .atividade h3 {
   color: #1a7e4e;
   font-size: 1.1rem;
   margin-top: 20px;
   margin-bottom: 20px;
   font-weight: 700;
-} 
+}
 .atividade p {
   color: #555;
   font-size: 1.2rem;
   line-height: 1.6;
- text-align: center;
+  text-align: center;
   text-align: left;
 
   width: 100%;
@@ -68,12 +68,34 @@ font-size: 2.5rem;
   padding: 18px 22px;
   background-color: #53d89c9f;
   color: #2b8628ea;
-  font-weight: 700; 
+  font-weight: 700;
   font-size: 0.9rem;
   border: none;
   border-radius: 5px;
-  cursor: pointer;  
+  cursor: pointer;
   width: 100%;
   margin-top: 30px;
   line-height: 1.6;
+}
+
+@media (max-width: 768px) {
+  .atividades {
+    padding: 20px;
+  }
+
+  .atividades-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .atividades-title {
+    font-size: 2rem;
+    margin-bottom: 30px;
+  }
+
+  .atividade {
+    width: 100%;
+    margin-left: 0;
+    margin-bottom: 20px;
+  }
 }
