--- a/assets/css/especialidade.css
+++ b/assets/css/especialidade.css
@@ -20,11 +20,11 @@
 }
 
 /* Lista de cards */
-.especialidades-lista{
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    flex-wrap: nowrap;
+.especialidades-lista {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  flex-wrap: nowrap;
 }
 
 /* Card */
@@ -63,4 +63,17 @@
   font-size: 30px;
   font-weight: 600;
   color: #444;
+}
+
+@media (max-width: 900px) {
+  .especialidades-lista {
+    flex-wrap: wrap;
+  }
+  .especialidade {
+    flex: 1 1 100%;
+    width: 100%;
+  }
+  .especialidade img {
+    height: auto;
+  }
 }
