--- a/assets/css/resultadoPesquisa.css
+++ b/assets/css/resultadoPesquisa.css
@@ -101,17 +101,17 @@
   display: flex;
   flex-direction: column;
 }
-.card-info h2{
+.card-info h2 {
   margin-bottom: 20px;
   font-weight: 400;
   font-size: 2rem;
 }
-.card-info span{
+.card-info span {
   color: #23875f;
   font-weight: 400;
   font-size: 1.1875rem;
 }
-.card-meta {    
+.card-meta {
   margin-bottom: 15px;
   color: #6e7180;
   font-size: 0.9rem;
@@ -120,15 +120,36 @@
 .card-meta a {
   color: #23875f;
   text-decoration: none;
-    font-weight: 400;
+  font-weight: 400;
   font-size: 1.1875rem;
 }
 .fim {
-display: inline-block;
-padding: 0 1.5em;
-line-height: 3em;
-font-weight: 400;
-font-size: 1rem;
-border: 2px solid #0000004d;  
-margin-top: 40px;
+  display: inline-block;
+  padding: 0 1.5em;
+  line-height: 3em;
+  font-weight: 400;
+  font-size: 1rem;
+  border: 2px solid #0000004d;
+  margin-top: 40px;
+}
+
+@media (max-width: 768px) {
+  .container-resultados {
+    padding: 20px;
+  }
+  .card {
+    padding: 30px;
+  }
+  .card h1 {
+    margin-bottom: 40px;
+    font-size: 2rem;
+  }
+  .card-destaque {
+    flex-direction: column;
+    height: auto;
+  }
+  .card-destaque img {
+    width: 100%;
+    height: auto;
+  }
 }
