--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -109,8 +109,6 @@ img {
   justify-content: center;
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.1);
   background-color: rgb(75, 201, 106);
-
-  
 }
 
 .slider-btn:hover {
@@ -137,7 +135,6 @@ img {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   min-width: 220px;
   padding: 10px 40px;
- 
 }
 
 .btn:hover {
@@ -272,20 +269,20 @@ img {
   display: flexbox;
   padding: 60px 20px;
   background-color: #ffffff;
-} 
-.atividades-title  {
-text-align: center  ;
-font-size: 2.5rem;
+}
+.atividades-title {
+  text-align: center;
+  font-size: 2.5rem;
   color: #7b7b7b;
   margin: 0;
   padding: 0;
-font-weight: 600;
+  font-weight: 600;
   line-height: 1.3;
   box-sizing: border-box;
   font-style: inherit;
-} 
+}
 .atividades-container {
-  display: flex;  
+  display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
@@ -298,7 +295,7 @@ font-weight: 600;
 
   padding: 10px 5px;
   border: 1px solid #80f186;
-  background-color:#f1fff9;
+  background-color: #f1fff9;
 
   width: 30%;
   box-sizing: border-box;
@@ -310,59 +307,61 @@ font-weight: 600;
 .atividade img {
   width: 100%;
   height: auto;
-} 
+}
 .atividade h3 {
   color: #1a7e4e;
   font-size: 1.1rem;
   margin-top: 20px;
   margin-bottom: 20px;
   font-weight: 700;
-} 
+}
 .atividade p {
   color: #555;
   font-size: 1.2rem;
   line-height: 1.6;
- text-align: center;
+  text-align: center;
   text-align: left;
 
   width: 100%;
   text-align: left;
 }
-.atividade button {
+.atividade button,
+.atividade .btn-atividade {
+  display: block;
+  text-align: center;
+  text-decoration: none;
   padding: 18px 22px;
   background-color: #53d89c9f;
   color: #2b8628ea;
-  font-weight: 700; 
+  font-weight: 700;
   font-size: 0.9rem;
   border: none;
   border-radius: 5px;
-  cursor: pointer;  
+  cursor: pointer;
   width: 100%;
   margin-top: 30px;
   line-height: 1.6;
 }
-.parcerias-title{
-  text-align: center  ;
-font-size: 2.5rem;
+.parcerias-title {
+  text-align: center;
+  font-size: 2.5rem;
   color: #7b7b7b;
   margin: 0;
   padding: 0;
-font-weight: 600;
+  font-weight: 600;
   line-height: 1.3;
   box-sizing: border-box;
   font-style: inherit;
-} 
-.parcerias-logos{
-display: inline-block;
-vertical-align: middle;
+}
+.parcerias-logos {
+  display: inline-block;
+  vertical-align: middle;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-
-
-  }
-  .parcerias-logos img{
-    width: 19%;
-    height: 19% ;
-  } 
+}
+.parcerias-logos img {
+  width: 19%;
+  height: 19%;
+}
